jsappapi/2.3.2/interfaces/material.css
@import "/fonts/fonts.css";

header {
    background-color: var(--accent);
    color: var(--background);
    text-align: left;
    float: left;
    padding: 10px;
    margin-bottom: 10px;
    position: fixed;
    border-radius: 20px;
    top: 5px;
    left: 5px;
    right: 5px;
    z-index: 990;
    font-family: "Quicksand", "Inter", Arial, sans-serif;
    font-size: 32px;
    box-shadow: 0 1px 7px -4px var(--shadow);
    transition: 0.2s;
}

html,body {
    margin: 0;
    padding: 0;
    background-color: var(--background);
    font-family: 'Inter', Arial, sans-serif;
    color: var(--foreground);
    user-select: none;
}

body {
    z-index: 0;
    margin-top: 75px;
}

e {
    display: block;
    padding: 10px;
    font-size: 14px;
}

r {
    float: right;
    color: var(--foreground2)
}

.alt {
    color: var(--foreground2)
}

p {
    font-size: 14px;
    margin: 10px
}

p2 {
    display: block;
    margin: 7px;
    margin-left: 7px;
    margin-bottom: 2px;
    font-weight: 500;
    font-size: 20px;
    width: max-content;
}

.area {
    box-shadow: 0 0 4px 0px var(--shadow);
    border-radius: 10px;
    margin: 10px;
    margin-top: 13px;
    margin-bottom: 0;
    padding: 5px;
}

textarea {
    background: var(--elementcolor);
    border-radius: 10px;
    color: var(--foreground);
    width: -webkit-fill-available;
    width: -moz-available;
    min-height: 240px;
    resize: none;
    transition: 0.2s;
    margin: 10px;
    margin-top: 5px;
    padding: 7px;
    border:none;
    box-shadow: 0 1px 7px -4px var(--shadow);
}

.textareabig {
    height: 80%;
}
input[type="password"], input[type="text"], input[type="number"] {
    background-color: var(--elementcolor);
    border: none;
    border-radius: 50px;
    color: var(--foreground);
    padding: 5px;
    margin-left: 5px;
    height: 32px;
    width: 280px;
    transition: .1s
}

input:focus {
    background: var(--foreground3);
}

textarea:focus {
    background: var(--background2);
}

button, .button {
    font-family: 'Inter', Arial;
    font-size: 14px;
    background: var(--elementcolor);
    padding: 6px;
    border: 0;
    border-radius: 20px;
    color: var(--foreground);
    margin: 4px;
    cursor: pointer;
    transition: 0.1s
}

button:active, .button:active {
    cursor: default;
    background: var(--active)!important
}

:focus {
    outline: 0
}

#loadingscreen {
    position: fixed;
    background-color: var(--background);
    color: var(--foreground);
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    text-align: center;
    z-index: 1000
}

#loadingtext {
    font-size: 48px;
    font-family: sans-serif;
    display: block;
    margin-top: auto;
    margin-bottom: auto
}

#jslogo {
    position: fixed;
    font-size: 24px;
    font-family: sans-serif;
    bottom: 10px;
    right: 10px;
    color: var(--foreground2)
}

#dialog {
    z-index: 9999;
    padding: 10px;
    position: fixed;
    background: var(--background);
    border: 1px solid var(--border);
    font-size: 15px!important;
    border-radius: 15px;
    width: 300px;
    height: 100px;
    top: 50%;
    left: 50%;
    margin-top: -50px;
    margin-left: -150px;
    box-shadow: 0 0 16px 1px var(--shadow)
}

div#dialog>button {
    min-width: 50px;
    right: 0;
    bottom: 0;
    position: absolute;
    font-size: 14px!important;
    height: max-content;
}

#overlay {
    z-index: 9998;
    position: fixed;
    background-color: var(--darkoverlay);
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    backdrop-filter: blur(10px)saturate(0.8);
}

select {
    background-color: var(--elementcolor);
    padding: 6px;
    padding-left: 10px;
    padding-right: 10px;
    border: 0;
    border-radius: 20px;
    color: var(--foreground);
    margin: 2px;
    cursor: pointer;
    min-width: 100px;
    font-family: 'Inter', Arial, sans-serif;
    transition: 0.2s;
}

select:active {
    background-color: var(--active);
}

.headerButtons {
    background: var(--elementcolor);
    position: fixed;
    top:10px;
    right:10px;
    display: flex;
    justify-content: space-evenly;
    z-index: 999;
    transition: 0.2s;
    border-radius: 20px;
    box-shadow: 0 0 4px -4px var(--shadow);
}
.headerButton {
    width: 30px;
    height: 30px;
    padding:0;
    background: var(--transparent);
    border-radius: 50%;
    font-size: 20px!important;
    border: var(--transparent)!important;
    margin: 3px;
    color: var(--foreground2)
}
.headerButton:active {
    background: var(--active)!important
}

button>.icon {
    font-size: 18px;
    vertical-align: bottom;
    margin-right: 2px;
}

p2>.icon {
    font-size: 24px;
    vertical-align: bottom;
    margin-right: 2px;
}

a {
    color: var(--accent);
    text-decoration: none;
}

::placeholder {
    color: var(--foreground);
    opacity: 0.4;
}

.appTile {
    display: flex;
    vertical-align: middle;
    background: var(--elementcolor);
    border-radius: 20px;
    padding: 5px;
    margin: 5px;
    width: 180px;
    height: 100px;
    text-align: center;
    cursor: pointer;
    transition: 0.2s;
    float:left;
    flex-direction: row;
    flex-wrap: nowrap;
    align-content: center;
    justify-content: center;
    align-items: center;
}
.appTile p {
    font-size: 18px;
    margin: 5px;
}

.appTile:hover {
    background: var(--background2);
}
.appTile:active {
    background: var(--active);
    cursor: default;
}

.appIcon {
    font-size: 60px;
}

@media(hover: hover) {
    .headerButton:hover {
        background: var(--background2);
        color: var(--foreground);
    }

    a:hover {
        color: var(--foreground);
        text-decoration: underline;
    }
    
    button:hover, .button:hover {
        background: var(--background2);
    }

    select:hover {
        background: var(--background2);
    }

    ::-webkit-scrollbar-thumb:hover {
        background: var(--background2);
    }
}

@media(max-width: 400px) {
    header {
        font-size: 24px;
        padding: 5px;
    }

    body {
        margin-top: 50px
    }

    .headerButtons {
        top: 7px;
        right: 7px;
    }

    #dialog {
        position: fixed;
        height: 100px;
        top: 50%;
        left: 5px;
        right: 5px;
        margin-top: -50px;
        margin-left: 0;
        width: auto
    }
}

@media(min-width: 800px) {
    #dialog {
        width: 600px !important;
        height: 200px !important;
        margin-top: -100px !important;
        margin-left: -300px !important
    }
}

::selection {
  background: #ccc;
}

/* Custom Scrollbars */
::-webkit-scrollbar {
  width: 12px;
}
::-webkit-scrollbar-track {
  background: var(--background);
  border-radius: 50px;
}
::-webkit-scrollbar-thumb {
  background: var(--elementcolor);
  border-radius: 50px;
}

::-webkit-scrollbar-thumb:active {
  background: var(--active);
}

/* Toggle switch */
.switch {
    position: relative;
    display: inline-block;
    width: 30px;
    height: 17px;
    margin: 4px;
    cursor: pointer;
}

.switch input {
    opacity: 0;
    width: 0;
    height: 0
}

.slider {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: var(--background2);
    transition: .2s;
    border-radius: 50px;
}

.slider:before {
    position: absolute;
    content: "";
    height: 13px;
    width: 13px;
    left: 2px;
    bottom: 2px;
    background-color: var(--foreground);
    transition: .2s;
    border-radius: 50px;
}

input:checked+.slider {
    background-color: var(--accent)
}

input:checked+.slider:before {
    -webkit-transform: translateX(13px);
    -ms-transform: translateX(13px);
    transform: translateX(13px)
}

.slider.round {
    border-radius: 17px
}

.slider.round:before {
    border-radius: 50%
}

.toggleSwitchContainer {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-content: center;
    justify-content: flex-start;
    align-items: center;
}

